syntax = "proto3";

import "google/protobuf/timestamp.proto";

package analytics.v1;

// Real-time analytics summary
message PaymentAnalytics {
    string total_volume = 1;
    uint32 unique_users = 2;
    uint32 unique_providers = 3;
    string avg_payment_size = 4;
    uint32 payment_frequency = 5;
    uint64 block_number = 6;
    google.protobuf.Timestamp timestamp = 7;
}

// User behavior metrics for AI insights
message UserMetrics {
    bytes user_address = 1;
    string total_deposits = 2;
    string total_withdrawals = 3;
    string total_payments = 4;
    uint32 payment_count = 5;
    string avg_payment_size = 6;
    uint64 last_activity_block = 7;
    repeated bytes providers_used = 8;
    double payment_pattern_score = 9;
    string risk_category = 10; // "low", "medium", "high"
    repeated string ai_insights = 11; // AI-generated insights
}

// Provider performance analytics
message ProviderMetrics {
    bytes provider_address = 1;
    string total_earnings = 2;
    string total_withdrawals = 3;
    uint32 unique_users = 4;
    uint64 total_api_calls = 5;
    string avg_call_value = 6;
    double reliability_score = 7;
    double growth_rate = 8;
    string performance_tier = 9; // "bronze", "silver", "gold", "platinum"
}

// Real-time anomaly detection
message AnomalyAlert {
    string anomaly_type = 1; // "large_payment", "frequent_activity", "new_pattern"
    string description = 2;
    bytes user_address = 3;
    bytes provider_address = 4;
    string transaction_hash = 5;
    double severity_score = 6; // 0.0 - 1.0
    google.protobuf.Timestamp detected_at = 7;
    uint64 block_number = 8;
}

// AI-powered predictive insights
message PredictiveInsights {
    bytes user_address = 1;
    string predicted_next_deposit_amount = 2;
    uint64 predicted_next_deposit_block = 3;
    double churn_probability = 4;
    repeated string optimization_suggestions = 5;
    double cost_savings_potential = 6;
}

// Network effect analysis
message NetworkMetrics {
    uint32 total_unique_users = 1;
    uint32 total_unique_providers = 2;
    uint32 active_user_provider_pairs = 3;
    double network_density = 4; // connections / possible_connections
    repeated UserProviderEdge top_connections = 5;
    string total_network_volume = 6;
}

message UserProviderEdge {
    bytes user_address = 1;
    bytes provider_address = 2;
    string total_volume = 3;
    uint32 transaction_count = 4;
    double relationship_strength = 5;
}

// Token API enriched data
message TokenEnrichedMetrics {
    bytes token_address = 1;
    string symbol = 2;
    string name = 3;
    uint32 decimals = 4;
    string current_price_usd = 5;
    string market_cap = 6;
    uint64 holder_count = 7;
    string volume_24h = 8;
    double price_change_24h = 9;
}

// Multi-chain analytics
message CrossChainMetrics {
    string chain_name = 1;
    uint32 chain_id = 2;
    string total_volume = 3;
    uint32 user_count = 4;
    uint32 provider_count = 5;
    string avg_gas_cost = 6;
    double efficiency_score = 7; // volume per gas cost
}

// Aggregated analytics response
message AnalyticsBundle {
    PaymentAnalytics payment_analytics = 1;
    repeated UserMetrics user_metrics = 2;
    repeated ProviderMetrics provider_metrics = 3;
    repeated AnomalyAlert anomaly_alerts = 4;
    repeated PredictiveInsights predictive_insights = 5;
    NetworkMetrics network_metrics = 6;
    repeated TokenEnrichedMetrics token_metrics = 7;
    repeated CrossChainMetrics cross_chain_metrics = 8;
}